[package]
name = "naom"
version = "1.3.0"
homepage = "https://zenotta.io"
description = "NAOM is a distributed blockchain store with a dual double entry (DDE) data structure."
authors = ["Byron Houwens <byron.houwens@gmail.com>", "Anton Troskie <anton.troskie@zenotta.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Zenotta/NAOM"
keywords = ["blockchain", "distributed", "store", "DDE", "ledger"]
exclude = ["**/tests/**", "**/examples/**", "**/benchmarks/**", "docs/**", ".hooks/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
bincode = "1.3.3"
bytes = "1.4.0"
colored = { version = "2.0.0", optional = true }
hex = "0.4.3"
merkle-log = "0.0.4"
rand = "0.8.5"
ring = "0.16.20"
rocksdb = { version = "0.21.0", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
sha3 = "0.9.1"
time = "0.3.21"
tracing = "0.1.37"
base64 = "0.20.0"

[features]
default = []
build_bin = ["rocksdb", "colored"]

[[bin]]
name = "main"
required-features = ["build_bin"]

